modify the helper word of single search

--- a/templates/single_search.html
+++ b/templates/single_search.html
@@ -9,7 +9,7 @@
 <div style="margin-left: 10%;">
 <a href="/"><button>Back to Home</button></a>
 <form method="post">
-  <input type="text" placeholder="Search.." name="search"
+  <input type="text" placeholder="Enter Restaurant Full Name..." name="search"
   {% if search %} value="{{ search }}" {% endif %}
   >
   <input type="text" placeholder="(name, population, rating, price, zipcode)" name="how"
